<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWineName"
        android:layout_width="227dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:elevation="20dp"
        android:text="@string/wine_title"
        android:textColor="@color/cardview_light_background"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivWine_Picture"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/ivWine_Picture"
        android:layout_width="103dp"
        android:layout_height="142dp"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/wine_picture"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@color/colorGreenButton"
        tools:layout_editor_absoluteX="0dp" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvWine_Desc"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:elevation="20dp"
        android:focusable="auto"
        android:numStars="5"
        android:rating="5"
        android:stepSize=".5"
        app:layout_constraintBottom_toTopOf="@+id/tvWine_Desc"
        app:layout_constraintStart_toEndOf="@+id/ivWine_Picture"
        app:layout_constraintTop_toBottomOf="@+id/tvWineName" />

    <TextView
        android:id="@+id/tvWine_Desc"
        android:layout_width="263dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/tvWineName"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:elevation="20dp"
        android:text="@string/wine_description"
        android:textColor="@color/cardview_light_background"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivWine_Picture"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.79" />

    <TextView
        android:id="@+id/tvSee_Reviews"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_alignEnd="@+id/tvWine_Desc"
        android:layout_alignTop="@+id/tvDetails"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorAccent"
        android:elevation="30dp"
        android:text="@string/see_reviews"
        android:textColor="@color/colorGreenButton"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/tvWine_Desc"
        app:layout_constraintVertical_bias="0.42000002"
        tools:layout_editor_absoluteX="191dp" />

    <TextView
        android:id="@+id/tvChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/tvSee_Reviews"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorAccent"
        android:elevation="30dp"
        android:text="@string/choose"
        android:textColor="@color/colorGreenButton"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toEndOf="@+id/tvSee_Reviews"
        app:layout_constraintTop_toBottomOf="@+id/tvWine_Desc" />

    <TextView
        android:id="@+id/tvDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/tvWineName"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorAccent"
        android:elevation="30dp"
        android:text="@string/details"
        android:textColor="@color/colorGreenButton"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@+id/tvSee_Reviews"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivWine_Picture"
        app:layout_constraintTop_toBottomOf="@+id/tvWine_Desc"
        app:layout_constraintVertical_bias="0.32999998" />

    <TextView
        android:id="@+id/tvWine_Source"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ratingBar"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:elevation="20dp"
        android:text="@string/wine_source"
        android:textColor="@color/cardview_light_background"
        android:textSize="9sp"
        app:layout_constraintBottom_toTopOf="@+id/tvWine_Desc"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/ivWine_Picture"
        app:layout_constraintTop_toBottomOf="@+id/tvWinePoints"
        app:layout_constraintVertical_bias="0.84000003" />

    <TextView
        android:id="@+id/tvRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="X"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/ivWine_Picture"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvWinePoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/wine_points"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/tvWine_Desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toEndOf="@+id/ratingBar"
        app:layout_constraintTop_toBottomOf="@+id/tvWineName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvRatingsCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ratings_count"
        android:textColor="@color/cardview_light_background"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/tvWine_Desc"
        app:layout_constraintEnd_toStartOf="@+id/tvWinePoints"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ratingBar"
        app:layout_constraintTop_toBottomOf="@+id/tvWineName"
        app:layout_constraintVertical_bias="0.6" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

</android.support.constraint.ConstraintLayout>