<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wine_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteY="81dp">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWineName"
        android:layout_width="285dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:elevation="20dp"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/wine_title"
        android:textAlignment="center"
        android:textColor="@color/cardview_light_background"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivWine_Picture"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/ivWine_Picture"
        android:layout_width="102dp"
        android:layout_height="145dp"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/wine_picture"
        android:onClick="onClickWineCardDetails"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_wine" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvWine_Desc"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:elevation="20dp"
        android:focusable="auto"
        android:numStars="5"
        android:rating="5"
        android:stepSize=".5"
        app:layout_constraintBottom_toTopOf="@+id/tvWine_Desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivWine_Picture"
        app:layout_constraintTop_toBottomOf="@+id/tvWineName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvWine_Desc"
        android:layout_width="263dp"
        android:layout_height="44dp"
        android:layout_alignStart="@+id/tvWineName"
        android:layout_alignParentTop="true"
        android:elevation="20dp"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/wine_description"
        android:textColor="@color/cardview_light_background"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toEndOf="@+id/ivWine_Picture"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.614" />

    <TextView
        android:id="@+id/tvChoose"
        android:layout_width="57dp"
        android:layout_height="22dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorAccent"
        android:elevation="30dp"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/choose"
        android:textColor="@color/colorGreenButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/ivWine_Picture"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvEdit"
        android:layout_width="60dp"
        android:layout_height="22dp"
        android:layout_alignStart="@+id/tvWineName"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorAccent"
        android:elevation="30dp"
        android:fontFamily="@font/comfortaa_light"
        android:onClick="onClickWineCardEdit"
        android:text="@string/edit"
        android:textColor="@color/colorGreenButton"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toEndOf="@+id/ivWine_Picture"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:text="    Edit" />

    <ImageView
        android:id="@+id/iv_corkscrew_edit"
        android:layout_width="52dp"
        android:layout_height="23dp"
        android:layout_marginBottom="5dp"
        android:onClick="onClickWineCardEdit"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toEndOf="@+id/ivWine_Picture"
        app:layout_constraintTop_toBottomOf="@+id/tvWine_Desc"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_corkscrew" />

    <TextView
        android:id="@+id/tvWine_Source"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ratingBar"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="20dp"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/wine_source"
        android:textColor="@color/cardview_light_background"
        android:textSize="9sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintStart_toEndOf="@+id/ivWine_Picture"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/tvRemove"
        android:layout_width="23dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text=" X"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/ivWine_Picture"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvWinePoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/wine_points"
        android:textColor="@android:color/white"
        android:textSize="9sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.598"
        app:layout_constraintStart_toStartOf="@+id/ivWine_Picture"
        app:layout_constraintTop_toTopOf="@+id/tvWineName"
        app:layout_constraintVertical_bias="0.403" />

    <TextView
        android:id="@+id/tvRatingsCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/ratings_count"
        android:textColor="@color/cardview_light_background"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toEndOf="@+id/ivWine_Picture"
        app:layout_constraintTop_toTopOf="@+id/tvWineName"
        app:layout_constraintVertical_bias="0.36" />

    <ImageView
        android:id="@+id/iv_share_active"
        android:layout_width="23dp"
        android:layout_height="22dp"
        android:onClick="onClickHelpShare"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.992"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65"
        app:srcCompat="@drawable/ic_share" />

</android.support.constraint.ConstraintLayout>
